[package]
name = "process-monitor"
version = "0.1.0"
authors = ["Jean Fontena <diegofontena@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
psutil = "3.1.0"
clap = "2.33.1"
csv = "1.1.3"
chrono = "0.4.13"
